c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@arrays.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arrays.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2Rust_Unnamed {
    pub y: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2Rust_Unnamed_0 {
    pub x: *mut ::core::ffi::c_char,
    pub y: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2Rust_Unnamed_1 {
    pub x: ::core::ffi::c_short,
    pub y: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2Rust_Unnamed_2 {
    pub x: ::core::ffi::c_short,
    pub y: ::core::ffi::c_int,
}
#[unsafe(no_mangle)]
pub static mut static_char_array: [::core::ffi::c_char; 9] =
    unsafe { ::core::mem::transmute::<[u8; 9], [::core::ffi::c_char; 9]>(*b"mystring\0") };
#[unsafe(no_mangle)]
pub static mut static_char_ptr: *mut ::core::ffi::c_char =
    b"mystring\0".as_ptr() as *const ::core::ffi::c_char as *mut ::core::ffi::c_char;
#[unsafe(no_mangle)]
pub static mut static_void_ptr: *mut ::core::ffi::c_void =
    &raw const static_char_array as *mut ::core::ffi::c_char as *mut ::core::ffi::c_void;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn entry() {
    let mut int_2d: [[::core::ffi::c_int; 1]; 1] = [[1 as ::core::ffi::c_int]];
    int_2d[0 as usize][0 as usize] += 9 as ::core::ffi::c_int;
    let mut int_empty_init: [::core::ffi::c_int; 16] = [0; 16];
    int_empty_init[15 as usize] += 9 as ::core::ffi::c_int;
    let mut int_too_long: [::core::ffi::c_int; 2] =
        [1 as ::core::ffi::c_int, 2 as ::core::ffi::c_int];
    let mut int_zero: [::core::ffi::c_int; 0] = [0; 0];
    let mut int_too_short: [::core::ffi::c_int; 16] = [0 as ::core::ffi::c_int; 16];
    int_too_short[15 as usize] += 9 as ::core::ffi::c_int;
    let mut struct_init_too_short: [C2Rust_Unnamed_0; 1] = [C2Rust_Unnamed_0 {
        x: ::core::ptr::null_mut::<::core::ffi::c_char>(),
        y: 0,
    }; 1];
    struct_init_too_short[0 as usize].y += 9 as ::core::ffi::c_int;
    let mut struct_init_too_long: [C2Rust_Unnamed; 1] = [C2Rust_Unnamed {
        y: 1 as ::core::ffi::c_int,
    }];
    struct_init_too_long[0 as usize].y += 9 as ::core::ffi::c_int;
    let mut char_with_string: [::core::ffi::c_char; 4] =
        ::core::mem::transmute::<[u8; 4], [::core::ffi::c_char; 4]>(*b"abc\0");
    let mut char_with_chars: [::core::ffi::c_char; 3] = [
        'd' as ::core::ffi::c_char,
        'e' as ::core::ffi::c_char,
        'f' as ::core::ffi::c_char,
    ];
    let mut char_with_ints: [::core::ffi::c_char; 2] = [1 as ::core::ffi::c_char, 0];
    let mut char_with_init: [::core::ffi::c_char; 5] =
        ::core::mem::transmute::<[u8; 5], [::core::ffi::c_char; 5]>(*b"abcd\0");
    let mut char_too_long: [::core::ffi::c_char; 3] =
        ::core::mem::transmute::<[u8; 3], [::core::ffi::c_char; 3]>(*b"abc");
    let mut char_too_short: [::core::ffi::c_char; 20] =
        ::core::mem::transmute::<[u8; 20], [::core::ffi::c_char; 20]>(
            *b"abc\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0",
        );
    let mut int_var_ptr: *mut ::core::ffi::c_int =
        &raw mut int_empty_init as *mut ::core::ffi::c_int;
    let mut int_var_array_ptr: *mut [::core::ffi::c_int; 16] =
        &raw mut int_empty_init as *mut [::core::ffi::c_int; 16];
    let mut char_var_ptr: *mut ::core::ffi::c_char =
        &raw mut char_with_string as *mut ::core::ffi::c_char;
    let mut char_var_array_ptr: *mut [::core::ffi::c_char; 4] =
        &raw mut char_with_string as *mut [::core::ffi::c_char; 4];
    let mut const_char_lit_ptr: *const ::core::ffi::c_char =
        b"abc\0".as_ptr() as *const ::core::ffi::c_char;
    let mut const_char_lit_array_ptr: *const [::core::ffi::c_char; 4] =
        b"abc\0" as *const [u8; 4] as *const [::core::ffi::c_char; 4];
    let mut char_lit_ptr: *mut ::core::ffi::c_char =
        b"abc\0".as_ptr() as *const ::core::ffi::c_char as *mut ::core::ffi::c_char;
    let mut char_lit_array_ptr: *mut [::core::ffi::c_char; 4] = b"abc\0" as *const [u8; 4]
        as *const [::core::ffi::c_char; 4]
        as *mut [::core::ffi::c_char; 4];
    let mut past_end: *mut ::core::ffi::c_char = (&raw mut static_char_array
        as *mut ::core::ffi::c_char)
        .offset(9) as *mut ::core::ffi::c_char;
    past_end = static_char_ptr.offset(8 as isize) as *mut ::core::ffi::c_char;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn short_initializer() {
    let mut empty_brackets: [::core::ffi::c_int; 16] = [0; 16];
    let mut brackets_with_zero: [::core::ffi::c_int; 16] = [0 as ::core::ffi::c_int; 16];
    let mut brackets_with_one: [::core::ffi::c_int; 4] = [1 as ::core::ffi::c_int, 0, 0, 0];
    let mut excess_elements_1: [::core::ffi::c_int; 2] =
        [1 as ::core::ffi::c_int, 2 as ::core::ffi::c_int];
    let mut excess_elements_2: [::core::ffi::c_int; 0] = [0; 0];
    let mut single_struct: [C2Rust_Unnamed_2; 1] = [C2Rust_Unnamed_2 {
        x: 1 as ::core::ffi::c_short,
        y: 2 as ::core::ffi::c_int,
    }];
    let mut many_struct: [C2Rust_Unnamed_1; 3] = [
        C2Rust_Unnamed_1 {
            x: 1 as ::core::ffi::c_short,
            y: 2 as ::core::ffi::c_int,
        },
        C2Rust_Unnamed_1 { x: 0, y: 0 },
        C2Rust_Unnamed_1 { x: 0, y: 0 },
    ];
}
