c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@atomics.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/atomics.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(core_intrinsics, raw_ref_op)]
pub type size_t = usize;
pub type uint64_t = u64;
pub type atomic_int = ::core::ffi::c_int;
#[no_mangle]
pub unsafe extern "C" fn c11_atomics(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    *&raw mut x = 0 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_store_seqcst(&raw mut x, 1 as ::core::ffi::c_int);
    ::core::intrinsics::atomic_load_seqcst(&raw mut x);
    ::core::intrinsics::atomic_xadd_seqcst(&raw mut x, 2 as ::core::ffi::c_int);
    ::core::intrinsics::atomic_xsub_seqcst(&raw mut x, 1 as ::core::ffi::c_int);
    ::core::intrinsics::atomic_and_seqcst(&raw mut x, 0xf as ::core::ffi::c_int);
    ::core::intrinsics::atomic_or_seqcst(&raw mut x, 0x10 as ::core::ffi::c_int);
    ::core::intrinsics::atomic_nand_seqcst(&raw mut x, 0xff as ::core::ffi::c_int);
    ::core::intrinsics::atomic_xchg_seqcst(&raw mut x, 42 as ::core::ffi::c_int);
    let mut expected: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut desired: ::core::ffi::c_int = 100 as ::core::ffi::c_int;
    let c2rust_result =
        ::core::intrinsics::atomic_cxchg_seqcst_seqcst(&raw mut x, *&raw mut expected, desired);
    *&raw mut expected = c2rust_result.0;
    c2rust_result.1;
    expected = 100 as ::core::ffi::c_int;
    desired = 200 as ::core::ffi::c_int;
    let c2rust_result_0 =
        ::core::intrinsics::atomic_cxchgweak_seqcst_seqcst(&raw mut x, *&raw mut expected, desired);
    *&raw mut expected = c2rust_result_0.0;
    c2rust_result_0.1;
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn fetch_after_atomics_signed(
    mut x: ::core::ffi::c_int,
) -> ::core::ffi::c_int {
    let c2rust_lhs = &raw mut x;
    let c2rust_rhs = 2 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_xadd_seqcst(c2rust_lhs, c2rust_rhs) + c2rust_rhs;
    let c2rust_lhs_0 = &raw mut x;
    let c2rust_rhs_0 = 1 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_xsub_seqcst(c2rust_lhs_0, c2rust_rhs_0) - c2rust_rhs_0;
    let c2rust_lhs_1 = &raw mut x;
    let c2rust_rhs_1 = 0xf as ::core::ffi::c_int;
    ::core::intrinsics::atomic_and_seqcst(c2rust_lhs_1, c2rust_rhs_1) & c2rust_rhs_1;
    let c2rust_lhs_2 = &raw mut x;
    let c2rust_rhs_2 = 0x10 as ::core::ffi::c_int;
    ::core::intrinsics::atomic_or_seqcst(c2rust_lhs_2, c2rust_rhs_2) | c2rust_rhs_2;
    let c2rust_lhs_3 = &raw mut x;
    let c2rust_rhs_3 = 0xff as ::core::ffi::c_int;
    !(::core::intrinsics::atomic_nand_seqcst(c2rust_lhs_3, c2rust_rhs_3) & c2rust_rhs_3);
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn fetch_after_atomics_unsigned(
    mut x: ::core::ffi::c_uint,
) -> ::core::ffi::c_uint {
    let c2rust_lhs = &raw mut x;
    let c2rust_rhs = 2 as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_xadd_seqcst(c2rust_lhs, c2rust_rhs).wrapping_add(c2rust_rhs);
    let c2rust_lhs_0 = &raw mut x;
    let c2rust_rhs_0 = 1 as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_xsub_seqcst(c2rust_lhs_0, c2rust_rhs_0).wrapping_sub(c2rust_rhs_0);
    let c2rust_lhs_1 = &raw mut x;
    let c2rust_rhs_1 = 0xf as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_and_seqcst(c2rust_lhs_1, c2rust_rhs_1) & c2rust_rhs_1;
    let c2rust_lhs_2 = &raw mut x;
    let c2rust_rhs_2 = 0x10 as ::core::ffi::c_uint;
    ::core::intrinsics::atomic_or_seqcst(c2rust_lhs_2, c2rust_rhs_2) | c2rust_rhs_2;
    let c2rust_lhs_3 = &raw mut x;
    let c2rust_rhs_3 = 0xff as ::core::ffi::c_uint;
    !(::core::intrinsics::atomic_nand_seqcst(c2rust_lhs_3, c2rust_rhs_3) & c2rust_rhs_3);
    return x;
}
#[no_mangle]
pub unsafe extern "C" fn initialized_atomic() -> ::core::ffi::c_int {
    let mut value: atomic_int = 5 as ::core::ffi::c_int;
    return ::core::intrinsics::atomic_load_seqcst(&raw mut value);
}
static atomic_numchars: size_t = 0;
#[no_mangle]
pub unsafe extern "C" fn atomic_size_t_remainder(mut value: uint64_t) -> uint64_t {
    return value.wrapping_rem(::core::intrinsics::atomic_load_seqcst(
        &raw mut atomic_numchars,
    ));
}
pub const __ATOMIC_SEQ_CST: ::core::ffi::c_int = 5 as ::core::ffi::c_int;
